src/main/java/pl/maciej/parser/ScriptsParser.java
// Generated from /home/maciej/IdeaProjects/skrypt/Scripts.g4 by ANTLR 4.7
package pl.maciej.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScriptsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, LBRACKET=2, RBRACKET=3, THEN=4, ENDIF=5, OR=6, AND=7, EQUALS=8, 
		FASLE=9, TRUE=10, SETOPTION=11, PLUS=12, MINUS=13, ASTERISK=14, DIVISION=15, 
		LEFT=16, RIGHT=17, OPTION=18, CPIECE=19, CPIECE_EX_U=20, SETERROR=21, 
		LET=22, COLOUR=23, COLOR=24, SETNUMERICOPTION=25, GETNUMERICOPTION=26, 
		PIECE_EX_U=27, PIECE=28, SURFACE=29, CSURFACE=30, SURFACE_EX=31, SURFACE_EX_U=32, 
		OUTERCOLOUR=33, INNERCOLOUR=34, CROD=35, CROD_EX=36, CROD_EX_U=37, ROD=38, 
		ROD_EX_U=39, CINNROD_EX_U=40, COUTROD_EX_U=41, MESSAGE=42, SCRIPT=43, 
		NAZWA=44, WORKFORCE=45, MH=46, ROUND=47, EXISTSVARIABLE=48, SETDIMENSION=49, 
		NUMBER=50, DECIMAL=51, COMMA=52, SEMICOLON=53, ID=54, VAR=55, WS=56, COMMENT=57;
	public static final int
		RULE_compilationUnit = 0, RULE_ifrule = 1, RULE_opcja = 2, RULE_setOpcja = 3, 
		RULE_scriptLink = 4, RULE_vardecl = 5, RULE_vardeclaration = 6, RULE_variable = 7, 
		RULE_color = 8, RULE_colour = 9, RULE_innercolor = 10, RULE_outercolor = 11, 
		RULE_cpiece = 12, RULE_cpiecexu = 13, RULE_seterror = 14, RULE_setnumeric = 15, 
		RULE_getnumeric = 16, RULE_piecex = 17, RULE_piece = 18, RULE_surface = 19, 
		RULE_csurface = 20, RULE_surfacex = 21, RULE_surfacexu = 22, RULE_crod = 23, 
		RULE_crodx = 24, RULE_crodxu = 25, RULE_rod = 26, RULE_rodx = 27, RULE_cinrod = 28, 
		RULE_coutrod = 29, RULE_message = 30, RULE_workforce = 31, RULE_existVar = 32, 
		RULE_setdimension = 33, RULE_arg = 34, RULE_nazwa = 35;
	public static final String[] ruleNames = {
		"compilationUnit", "ifrule", "opcja", "setOpcja", "scriptLink", "vardecl", 
		"vardeclaration", "variable", "color", "colour", "innercolor", "outercolor", 
		"cpiece", "cpiecexu", "seterror", "setnumeric", "getnumeric", "piecex", 
		"piece", "surface", "csurface", "surfacex", "surfacexu", "crod", "crodx", 
		"crodxu", "rod", "rodx", "cinrod", "coutrod", "message", "workforce", 
		"existVar", "setdimension", "arg", "nazwa"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'IF'", "'['", "']'", "'THEN'", "'ENDIF'", "'OR'", "'AND'", "'='", 
		"'FALSE'", "'TRUE'", "'SETOPTION'", "'+'", "'-'", "'*'", "'/'", "'('", 
		"')'", "'OPTION'", "'CPIECE'", "'CPIECE_EX_U'", "'SETERROR'", "'LET'", 
		"'COLOUR'", "'COLOR'", "'SETNUMERICOPTION'", "'GETNUMERICOPTION'", "'PIECE_EX_U'", 
		"'PIECE'", "'SURFACE'", "'CSURFACE'", "'SURFACE_EX'", "'SURFACE_EX_U'", 
		"'OUTERCOLOUR'", "'INNERCOLOUR'", "'CROD'", "'CROD_EX'", "'CROD_EX_U'", 
		"'ROD'", "'ROD_EX_U'", "'CINNROD_EX_U'", "'COUTROD_EX_U'", "'MESSAGE'", 
		"'SCRIPT'", "'NAZWA'", "'WORKFORCE'", "'MH'", "'ROUND'", "'EXISTSVARIABLE'", 
		"'SETDIMENSION'", null, null, "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IF", "LBRACKET", "RBRACKET", "THEN", "ENDIF", "OR", "AND", "EQUALS", 
		"FASLE", "TRUE", "SETOPTION", "PLUS", "MINUS", "ASTERISK", "DIVISION", 
		"LEFT", "RIGHT", "OPTION", "CPIECE", "CPIECE_EX_U", "SETERROR", "LET", 
		"COLOUR", "COLOR", "SETNUMERICOPTION", "GETNUMERICOPTION", "PIECE_EX_U", 
		"PIECE", "SURFACE", "CSURFACE", "SURFACE_EX", "SURFACE_EX_U", "OUTERCOLOUR", 
		"INNERCOLOUR", "CROD", "CROD_EX", "CROD_EX_U", "ROD", "ROD_EX_U", "CINNROD_EX_U", 
		"COUTROD_EX_U", "MESSAGE", "SCRIPT", "NAZWA", "WORKFORCE", "MH", "ROUND", 
		"EXISTSVARIABLE", "SETDIMENSION", "NUMBER", "DECIMAL", "COMMA", "SEMICOLON", 
		"ID", "VAR", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Scripts.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScriptsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ScriptsParser.EOF, 0); }
		public List<OpcjaContext> opcja() {
			return getRuleContexts(OpcjaContext.class);
		}
		public OpcjaContext opcja(int i) {
			return getRuleContext(OpcjaContext.class,i);
		}
		public List<SetOpcjaContext> setOpcja() {
			return getRuleContexts(SetOpcjaContext.class);
		}
		public SetOpcjaContext setOpcja(int i) {
			return getRuleContext(SetOpcjaContext.class,i);
		}
		public List<IfruleContext> ifrule() {
			return getRuleContexts(IfruleContext.class);
		}
		public IfruleContext ifrule(int i) {
			return getRuleContext(IfruleContext.class,i);
		}
		public List<ScriptLinkContext> scriptLink() {
			return getRuleContexts(ScriptLinkContext.class);
		}
		public ScriptLinkContext scriptLink(int i) {
			return getRuleContext(ScriptLinkContext.class,i);
		}
		public List<CpieceContext> cpiece() {
			return getRuleContexts(CpieceContext.class);
		}
		public CpieceContext cpiece(int i) {
			return getRuleContext(CpieceContext.class,i);
		}
		public List<CpiecexuContext> cpiecexu() {
			return getRuleContexts(CpiecexuContext.class);
		}
		public CpiecexuContext cpiecexu(int i) {
			return getRuleContext(CpiecexuContext.class,i);
		}
		public List<SeterrorContext> seterror() {
			return getRuleContexts(SeterrorContext.class);
		}
		public SeterrorContext seterror(int i) {
			return getRuleContext(SeterrorContext.class,i);
		}
		public List<SetnumericContext> setnumeric() {
			return getRuleContexts(SetnumericContext.class);
		}
		public SetnumericContext setnumeric(int i) {
			return getRuleContext(SetnumericContext.class,i);
		}
		public List<GetnumericContext> getnumeric() {
			return getRuleContexts(GetnumericContext.class);
		}
		public GetnumericContext getnumeric(int i) {
			return getRuleContext(GetnumericContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ScriptsParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ScriptsParser.SEMICOLON, i);
		}
		public List<PiecexContext> piecex() {
			return getRuleContexts(PiecexContext.class);
		}
		public PiecexContext piecex(int i) {
			return getRuleContext(PiecexContext.class,i);
		}
		public List<PieceContext> piece() {
			return getRuleContexts(PieceContext.class);
		}
		public PieceContext piece(int i) {
			return getRuleContext(PieceContext.class,i);
		}
		public List<SurfaceContext> surface() {
			return getRuleContexts(SurfaceContext.class);
		}
		public SurfaceContext surface(int i) {
			return getRuleContext(SurfaceContext.class,i);
		}
		public List<CsurfaceContext> csurface() {
			return getRuleContexts(CsurfaceContext.class);
		}
		public CsurfaceContext csurface(int i) {
			return getRuleContext(CsurfaceContext.class,i);
		}
		public List<SurfacexContext> surfacex() {
			return getRuleContexts(SurfacexContext.class);
		}
		public SurfacexContext surfacex(int i) {
			return getRuleContext(SurfacexContext.class,i);
		}
		public List<SurfacexuContext> surfacexu() {
			return getRuleContexts(SurfacexuContext.class);
		}
		public SurfacexuContext surfacexu(int i) {
			return getRuleContext(SurfacexuContext.class,i);
		}
		public List<InnercolorContext> innercolor() {
			return getRuleContexts(InnercolorContext.class);
		}
		public InnercolorContext innercolor(int i) {
			return getRuleContext(InnercolorContext.class,i);
		}
		public List<OutercolorContext> outercolor() {
			return getRuleContexts(OutercolorContext.class);
		}
		public OutercolorContext outercolor(int i) {
			return getRuleContext(OutercolorContext.class,i);
		}
		public List<ColorContext> color() {
			return getRuleContexts(ColorContext.class);
		}
		public ColorContext color(int i) {
			return getRuleContext(ColorContext.class,i);
		}
		public List<ColourContext> colour() {
			return getRuleContexts(ColourContext.class);
		}
		public ColourContext colour(int i) {
			return getRuleContext(ColourContext.class,i);
		}
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<CrodContext> crod() {
			return getRuleContexts(CrodContext.class);
		}
		public CrodContext crod(int i) {
			return getRuleContext(CrodContext.class,i);
		}
		public List<CrodxContext> crodx() {
			return getRuleContexts(CrodxContext.class);
		}
		public CrodxContext crodx(int i) {
			return getRuleContext(CrodxContext.class,i);
		}
		public List<CrodxuContext> crodxu() {
			return getRuleContexts(CrodxuContext.class);
		}
		public CrodxuContext crodxu(int i) {
			return getRuleContext(CrodxuContext.class,i);
		}
		public List<RodContext> rod() {
			return getRuleContexts(RodContext.class);
		}
		public RodContext rod(int i) {
			return getRuleContext(RodContext.class,i);
		}
		public List<RodxContext> rodx() {
			return getRuleContexts(RodxContext.class);
		}
		public RodxContext rodx(int i) {
			return getRuleContext(RodxContext.class,i);
		}
		public List<CinrodContext> cinrod() {
			return getRuleContexts(CinrodContext.class);
		}
		public CinrodContext cinrod(int i) {
			return getRuleContext(CinrodContext.class,i);
		}
		public List<CoutrodContext> coutrod() {
			return getRuleContexts(CoutrodContext.class);
		}
		public CoutrodContext coutrod(int i) {
			return getRuleContext(CoutrodContext.class,i);
		}
		public List<MessageContext> message() {
			return getRuleContexts(MessageContext.class);
		}
		public MessageContext message(int i) {
			return getRuleContext(MessageContext.class,i);
		}
		public List<WorkforceContext> workforce() {
			return getRuleContexts(WorkforceContext.class);
		}
		public WorkforceContext workforce(int i) {
			return getRuleContext(WorkforceContext.class,i);
		}
		public List<ExistVarContext> existVar() {
			return getRuleContexts(ExistVarContext.class);
		}
		public ExistVarContext existVar(int i) {
			return getRuleContext(ExistVarContext.class,i);
		}
		public List<SetdimensionContext> setdimension() {
			return getRuleContexts(SetdimensionContext.class);
		}
		public SetdimensionContext setdimension(int i) {
			return getRuleContext(SetdimensionContext.class,i);
		}
		public List<NazwaContext> nazwa() {
			return getRuleContexts(NazwaContext.class);
		}
		public NazwaContext nazwa(int i) {
			return getRuleContext(NazwaContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SETOPTION) | (1L << OPTION) | (1L << CPIECE) | (1L << CPIECE_EX_U) | (1L << SETERROR) | (1L << LET) | (1L << COLOUR) | (1L << COLOR) | (1L << SETNUMERICOPTION) | (1L << GETNUMERICOPTION) | (1L << PIECE_EX_U) | (1L << PIECE) | (1L << SURFACE) | (1L << CSURFACE) | (1L << SURFACE_EX) | (1L << SURFACE_EX_U) | (1L << OUTERCOLOUR) | (1L << INNERCOLOUR) | (1L << CROD) | (1L << CROD_EX) | (1L << CROD_EX_U) | (1L << ROD) | (1L << ROD_EX_U) | (1L << CINNROD_EX_U) | (1L << COUTROD_EX_U) | (1L << MESSAGE) | (1L << SCRIPT) | (1L << NAZWA) | (1L << WORKFORCE) | (1L << EXISTSVARIABLE) | (1L << SETDIMENSION))) != 0)) {
				{
				setState(106);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OPTION:
					{
					setState(72);
					opcja();
					}
					break;
				case SETOPTION:
					{
					setState(73);
					setOpcja();
					}
					break;
				case IF:
					{
					setState(74);
					ifrule();
					}
					break;
				case SCRIPT:
					{
					setState(75);
					scriptLink();
					}
					break;
				case CPIECE:
					{
					setState(76);
					cpiece();
					}
					break;
				case CPIECE_EX_U:
					{
					setState(77);
					cpiecexu();
					}
					break;
				case SETERROR:
					{
					setState(78);
					seterror();
					}
					break;
				case SETNUMERICOPTION:
					{
					setState(79);
					setnumeric();
					}
					break;
				case GETNUMERICOPTION:
					{
					setState(80);
					getnumeric();
					setState(81);
					match(SEMICOLON);
					}
					break;
				case PIECE_EX_U:
					{
					setState(83);
					piecex();
					}
					break;
				case PIECE:
					{
					setState(84);
					piece();
					}
					break;
				case SURFACE:
					{
					setState(85);
					surface();
					}
					break;
				case CSURFACE:
					{
					setState(86);
					csurface();
					}
					break;
				case SURFACE_EX:
					{
					setState(87);
					surfacex();
					}
					break;
				case SURFACE_EX_U:
					{
					setState(88);
					surfacexu();
					}
					break;
				case INNERCOLOUR:
					{
					setState(89);
					innercolor();
					}
					break;
				case OUTERCOLOUR:
					{
					setState(90);
					outercolor();
					}
					break;
				case COLOR:
					{
					setState(91);
					color();
					}
					break;
				case COLOUR:
					{
					setState(92);
					colour();
					}
					break;
				case LET:
					{
					setState(93);
					vardecl();
					}
					break;
				case CROD:
					{
					setState(94);
					crod();
					}
					break;
				case CROD_EX:
					{
					setState(95);
					crodx();
					}
					break;
				case CROD_EX_U:
					{
					setState(96);
					crodxu();
					}
					break;
				case ROD:
					{
					setState(97);
					rod();
					}
					break;
				case ROD_EX_U:
					{
					setState(98);
					rodx();
					}
					break;
				case CINNROD_EX_U:
					{
					setState(99);
					cinrod();
					}
					break;
				case COUTROD_EX_U:
					{
					setState(100);
					coutrod();
					}
					break;
				case MESSAGE:
					{
					setState(101);
					message();
					}
					break;
				case WORKFORCE:
					{
					setState(102);
					workforce();
					}
					break;
				case EXISTSVARIABLE:
					{
					setState(103);
					existVar();
					}
					break;
				case SETDIMENSION:
					{
					setState(104);
					setdimension();
					}
					break;
				case NAZWA:
					{
					setState(105);
					nazwa();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfruleContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ScriptsParser.IF, 0); }
		public TerminalNode LBRACKET() { return getToken(ScriptsParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(ScriptsParser.RBRACKET, 0); }
		public TerminalNode THEN() { return getToken(ScriptsParser.THEN, 0); }
		public TerminalNode ENDIF() { return getToken(ScriptsParser.ENDIF, 0); }
		public OpcjaContext opcja() {
			return getRuleContext(OpcjaContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExistVarContext existVar() {
			return getRuleContext(ExistVarContext.class,0);
		}
		public List<SetOpcjaContext> setOpcja() {
			return getRuleContexts(SetOpcjaContext.class);
		}
		public SetOpcjaContext setOpcja(int i) {
			return getRuleContext(SetOpcjaContext.class,i);
		}
		public List<IfruleContext> ifrule() {
			return getRuleContexts(IfruleContext.class);
		}
		public IfruleContext ifrule(int i) {
			return getRuleContext(IfruleContext.class,i);
		}
		public IfruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifrule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).enterIfrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).exitIfrule(this);
		}
	}

	public final IfruleContext ifrule() throws RecognitionException {
		IfruleContext _localctx = new IfruleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ifrule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IF);
			setState(114);
			match(LBRACKET);
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPTION:
				{
				setState(115);
				opcja();
				}
				break;
			case VAR:
				{
				setState(116);
				variable();
				}
				break;
			case EXISTSVARIABLE:
				{
				setState(117);
				existVar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(120);
			match(RBRACKET);
			setState(121);
			match(THEN);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IF || _la==SETOPTION) {
				{
				setState(124);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SETOPTION:
					{
					setState(122);
					setOpcja();
					}
					break;
				case IF:
					{
					setState(123);
					ifrule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpcjaContext extends ParserRuleContext {
		public TerminalNode OPTION() { return getToken(ScriptsParser.OPTION, 0); }
		public TerminalNode LEFT() { return getToken(ScriptsParser.LEFT, 0); }
		public List<TerminalNode> ID() { return getTokens(ScriptsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ScriptsParser.ID, i);
		}
		public TerminalNode COMMA() { return getToken(ScriptsParser.COMMA, 0); }
		public TerminalNode RIGHT() { return getToken(ScriptsParser.RIGHT, 0); }
		public OpcjaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opcja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).enterOpcja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).exitOpcja(this);
		}
	}

	public final OpcjaContext opcja() throws RecognitionException {
		OpcjaContext _localctx = new OpcjaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_opcja);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(OPTION);
			setState(132);
			match(LEFT);
			setState(133);
			match(ID);
			setState(134);
			match(COMMA);
			setState(135);
			match(ID);
			setState(136);
			match(RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetOpcjaContext extends ParserRuleContext {
		public TerminalNode SETOPTION() { return getToken(ScriptsParser.SETOPTION, 0); }
		public TerminalNode LEFT() { return getToken(ScriptsParser.LEFT, 0); }
		public List<TerminalNode> ID() { return getTokens(ScriptsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ScriptsParser.ID, i);
		}
		public TerminalNode COMMA() { return getToken(ScriptsParser.COMMA, 0); }
		public TerminalNode RIGHT() { return getToken(ScriptsParser.RIGHT, 0); }
		public TerminalNode SEMICOLON() { return getToken(ScriptsParser.SEMICOLON, 0); }
		public SetOpcjaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setOpcja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).enterSetOpcja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).exitSetOpcja(this);
		}
	}

	public final SetOpcjaContext setOpcja() throws RecognitionException {
		SetOpcjaContext _localctx = new SetOpcjaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_setOpcja);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(SETOPTION);
			setState(139);
			match(LEFT);
			setState(140);
			match(ID);
			setState(141);
			match(COMMA);
			setState(142);
			match(ID);
			setState(143);
			match(RIGHT);
			setState(144);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptLinkContext extends ParserRuleContext {
		public TerminalNode SCRIPT() { return getToken(ScriptsParser.SCRIPT, 0); }
		public TerminalNode LEFT() { return getToken(ScriptsParser.LEFT, 0); }
		public List<TerminalNode> ID() { return getTokens(ScriptsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ScriptsParser.ID, i);
		}
		public TerminalNode COMMA() { return getToken(ScriptsParser.COMMA, 0); }
		public TerminalNode RIGHT() { return getToken(ScriptsParser.RIGHT, 0); }
		public TerminalNode SEMICOLON() { return getToken(ScriptsParser.SEMICOLON, 0); }
		public ScriptLinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptLink; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).enterScriptLink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptsListener ) ((ScriptsListener)listener).exitScriptLink(this);
		}
	}

	public final ScriptLinkContext scriptLink() throws RecognitionException {
		ScriptLinkContext _localctx = new ScriptLinkContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scriptLink);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(SCRIPT);
			setState(147);
			match(LEFT);
			setState(148);
			match(ID);
			setState(149);
			match(COMMA);
			setState(150);
			match(ID);
			setState(151);
			match(RIGHT);
			setState(152);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
